force-app/main/default/objects/Order__c/fields/Amount_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Paid__c</fullName>
    <formula>Order_Amount_Total__c -  Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>