force-app/main/default/objects/Order__c/fields/Email_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_ID__c</fullName>
    <formula>Account__r.Contact_ID_for_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contact ID</label>
    <type>Text</type>
</CustomField>