force-app/main/default/objects/Order__c/fields/Order_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Total__c</fullName>
    <label>Order Amount Total</label>
    <summarizedField>Order_Line_Item__c.Total_Units_Price__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Custom_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>