force-app/main/default/objects/Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <summarizedField>Order_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Custom_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>