force-app/main/default/objects/Order__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>Invoice__c.Total_Paid__c</summarizedField>
    <summaryForeignKey>Invoice__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>