force-app/main/default/objects/Order__c/validationRules/Multiple_invoice_not_to_be_sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiple_invoice_not_to_be_sent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Status__c), &apos;Activated&apos;),
  ISCHANGED(Status__c) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Order status cannot be change to draft</errorMessage>
</ValidationRule>