force-app/main/default/objects/Order__c/validationRules/Order_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status__c), &apos;Activated&apos;),
ISCHANGED( Quantity__c )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Sorry you cant add products for Activated order. Please try to create new Order</errorMessage>
</ValidationRule>