force-app/main/default/objects/Order__c/validationRules/Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status__c), &apos;Activated&apos;),
ISCHANGED( Status__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Sorry you cant change status for Active order</errorMessage>
</ValidationRule>