force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Order_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Order_Amount_Total__c</columns>
    <columns>Total_Paid__c</columns>
    <columns>Amount_To_Be_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>