force-app/main/default/objects/Order__c/listViews/Order.listView-meta.xml
<ListView>
    <fullName>Order</fullName>
    <columns>NAME</columns>
    <columns>Order_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Order</label>
</ListView>